--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "dybasedev/keeper": "dev-master",
-    "monolog/monolog": "^1.23"
+    "monolog/monolog": "^1.23",
+    "usmanhalalit/pixie": "^2.0"
   },
   "require-dev": {
     "eaglewu/swoole-ide-helper": "dev-master"
