--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
   "require": {
     "96qbhy/keeper": "dev-master",
     "monolog/monolog": "^1.23",
-    "usmanhalalit/pixie": "^2.0"
+    "usmanhalalit/pixie": "^2.0",
+    "illuminate/cache": "^5.5",
+    "illuminate/filesystem": "^5.5",
+    "illuminate/redis": "^5.6"
   },
   "require-dev": {
     "eaglewu/swoole-ide-helper": "dev-master"
